src/test/ui/unsafe/ranged_ints.stderr
error[E0133]: initializing type with `rustc_layout_scalar_valid_range` attr is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints.rs:7:14
   |
LL |     let _x = NonZero(0); //~ ERROR initializing type with `rustc_layout_scalar_valid_range` attr
   |              ^^^^^^^^^^ initializing type with `rustc_layout_scalar_valid_range` attr
   |
   = note: initializing `NonZero` with a `0` violates layout constraints and is undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
